kubernetes.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: _NAME_-_SHORT_SHA_
spec:
  ports:
    - port: 8080
  selector:
    app: _NAME_-_SHORT_SHA_
