kubernetes.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-_SHORT_SHA_
  annotations:
    kubernetes.io/ingress.class: "nginx"

    # make sure the controller redirects (301) to HTTPS
    ingress.kubernetes.io/ssl-redirect: "true"

    nginx.org/hsts: "true"
    nginx.org/hsts-include-subdomains: "true"

    # will check the TLS configuration and make sure that the specified secret:
    # - Exists and contains a valid private/public key pair;
    # - The certificate is not expired;
    # - The certificate covers all domain names specified in the ingress config.
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: _NAME_-_SHORT_SHA_.theminte230.com
    http:
      paths:
        - path: /
          backend:
            serviceName: _NAME_-_SHORT_SHA_
            servicePort: 8080
  tls:
  - secretName: nginx-ingress-nginx-secret
    hosts:
    - '*.theminte230.com'
